--- a/index.html
+++ b/index.html
@@ -1,49 +1,60 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="UTF-8">
-    <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,700|Old+Standard+TT&display=swap&subset=cyrillic" rel="stylesheet">
-    <title>Портфолио Junior верстальщика</title>
-  </head>
 
-  <body>
-    <header class="page-header">
-      <div class="container">
-      <p>Контакты</p>      
-      </div>
-    </header>
+<head>
+  <meta charset="UTF-8">
+  <link rel="stylesheet" href="style.css">
+  <link
+    href="https://fonts.googleapis.com/css?family=Montserrat:400,500,700|Old+Standard+TT&display=swap&subset=cyrillic"
+    rel="stylesheet">
+  <title>Портфолио Junior верстальщика</title>
+</head>
 
+<body>
+  <header class="page-header">
     <div class="container">
+      <a class="header-email" href="mailto:eugene_korobkin@mail.ru">eugene_korobkin@mail.ru</a>
+      <a class="header-phone" href="tel:+79375450300">+79375450300</a>
+    </div>
+  </header>
+
+  <div class="container">
     <section class="hero-image">
       <h1 class="heading">Неопознанный Енот</h1>
       <p>Junior верстальщик</p>
     </section>
-    </div>
-    <div class="container">
+  </div>
+  <div class="container">
     <section class="intro">
       <h2 class="subheading">Давайте познакомимся</h2>
+      <figure class="user-image">
+        <img src="files/user2.JPG" width="928" alt="моя фотография">
+      </figure>
       <h3>Пара слов о себе</h3>
       <p>Текст с парой слов о себе.</p>
       <h3>Чем могу быть полезен</h3>
       <p>Текст о том, чем могу быть полезен.</p>
     </section>
-    </div>
-    <div class="container">
+  </div>
+  <div class="container">
     <section class="portfolio">
       <h2 class="subheading">Мои работы</h2>
-
+      <figure>
+        <img src="files/project.jpg" width="928" height="536" alt="Сайт магазина товаров для дома">
+      </figure>
       <h3>Магазин товаров для дома</h3>
       <p>Мой первый сайт.</p>
-
+      <a class="button" href="source\project\index.html">Открыть страницу</a>
       <h3>Блог начинающего верстальщика</h3>
       <p>Статический блог про обучение HTML и CSS.</p>
     </section>
-    </div>
-    <div class="container"></div>
-    <footer class="page-footer">
-      Контакты в подвале
-    </footer>
   </div>
-  </body>
+  <div class="container"></div>
+  <footer class="page-footer">
+    <a class="footer-email" href="mailto:eugene_korobkin@mail.ru">eugene_korobkin@mail.ru</a>
+    <a class="footer-phone" href="tel:+79375450300">+79375450300</a>
+  </footer>
+  </div>
+</body>
+
 </html>
