fix: nav styles

--- a/index.html
+++ b/index.html
@@ -214,13 +214,17 @@
           <article class="slider__item">
             <img src="./images/reviews__logo-1.svg" alt="Нью-Йорк Таймс" class="slider__logo-heading">
             <p class="slider__text">
-              «Действие пьесы «Длань Господня» разворачивается в подвале провинциальной церкви в Техасе, где мать главного
+              «Действие пьесы «Длань Господня» разворачивается в подвале провинциальной церкви в Техасе, где мать
+              главного
               героя с группой добровольцев готовит кукольное представление. Ей отчаянно нужна эта работа, её муж недавно
               умер, оставив её с сыном-подростком в эмоциональной и финансовой яме. И вот жуткая тварь захватывает
               контроль над левой рукой её беспокойного Джейсона и принимается терроризировать его и всех вокруг. По мере
-              накала страстей окружающие начинают подозревать, что рука одержима самим дьяволом, и пастор Грег предлагает
-              прибегнуть к экзорцизму. Однако «Длань Господня» — это не ужастик, по крайней мере, природа зла тут вовсе не
-              сверхъестественная. Чёрная комедия Аскинса о разделённой надвое душе человека ненавязчиво обнажает глубинные
+              накала страстей окружающие начинают подозревать, что рука одержима самим дьяволом, и пастор Грег
+              предлагает
+              прибегнуть к экзорцизму. Однако «Длань Господня» — это не ужастик, по крайней мере, природа зла тут вовсе
+              не
+              сверхъестественная. Чёрная комедия Аскинса о разделённой надвое душе человека ненавязчиво обнажает
+              глубинные
               импульсы — сексуальные, саморазрушительные, агрессивные — которые притаились в каждом из нас».
             </p>
             <a href="#" class="slider__link button-small">
@@ -231,13 +235,17 @@
           <article class="slider__item slider__item_offset">
             <img src="./images/reviews__logo-2.svg" alt="Нью-Йорк Таймс" class="slider__logo-heading">
             <p class="slider__text slider__text_concise">
-              «Действие пьесы «Длань Господня» разворачивается в подвале провинциальной церкви в Техасе, где мать главного
+              «Действие пьесы «Длань Господня» разворачивается в подвале провинциальной церкви в Техасе, где мать
+              главного
               героя с группой добровольцев готовит кукольное представление. Ей отчаянно нужна эта работа, её муж недавно
               умер, оставив её с сыном-подростком в эмоциональной и финансовой яме. И вот жуткая тварь захватывает
               контроль над левой рукой её беспокойного Джейсона и принимается терроризировать его и всех вокруг. По мере
-              накала страстей окружающие начинают подозревать, что рука одержима самим дьяволом, и пастор Грег предлагает
-              прибегнуть к экзорцизму. Однако «Длань Господня» — это не ужастик, по крайней мере, природа зла тут вовсе не
-              сверхъестественная. Чёрная комедия Аскинса о разделённой надвое душе человека ненавязчиво обнажает глубинные
+              накала страстей окружающие начинают подозревать, что рука одержима самим дьяволом, и пастор Грег
+              предлагает
+              прибегнуть к экзорцизму. Однако «Длань Господня» — это не ужастик, по крайней мере, природа зла тут вовсе
+              не
+              сверхъестественная. Чёрная комедия Аскинса о разделённой надвое душе человека ненавязчиво обнажает
+              глубинные
               импульсы — сексуальные, саморазрушительные, агрессивные — которые притаились в каждом из нас».
             </p>
             <a href="#" class="slider__link button-small">
@@ -248,13 +256,17 @@
           <article class="slider__item slider__item_offset">
             <img src="./images/reviews__logo-1.svg" alt="Нью-Йорк Таймс" class="slider__logo-heading">
             <p class="slider__text slider__text_concise">
-              «Действие пьесы «Длань Господня» разворачивается в подвале провинциальной церкви в Техасе, где мать главного
+              «Действие пьесы «Длань Господня» разворачивается в подвале провинциальной церкви в Техасе, где мать
+              главного
               героя с группой добровольцев готовит кукольное представление. Ей отчаянно нужна эта работа, её муж недавно
               умер, оставив её с сыном-подростком в эмоциональной и финансовой яме. И вот жуткая тварь захватывает
               контроль над левой рукой её беспокойного Джейсона и принимается терроризировать его и всех вокруг. По мере
-              накала страстей окружающие начинают подозревать, что рука одержима самим дьяволом, и пастор Грег предлагает
-              прибегнуть к экзорцизму. Однако «Длань Господня» — это не ужастик, по крайней мере, природа зла тут вовсе не
-              сверхъестественная. Чёрная комедия Аскинса о разделённой надвое душе человека ненавязчиво обнажает глубинные
+              накала страстей окружающие начинают подозревать, что рука одержима самим дьяволом, и пастор Грег
+              предлагает
+              прибегнуть к экзорцизму. Однако «Длань Господня» — это не ужастик, по крайней мере, природа зла тут вовсе
+              не
+              сверхъестественная. Чёрная комедия Аскинса о разделённой надвое душе человека ненавязчиво обнажает
+              глубинные
               импульсы — сексуальные, саморазрушительные, агрессивные — которые притаились в каждом из нас».
             </p>
             <a href="#" class="slider__link button-small">
@@ -265,13 +277,17 @@
           <article class="slider__item slider__item_offset">
             <img src="./images/reviews__logo-1.svg" alt="Нью-Йорк Таймс" class="slider__logo-heading">
             <p class="slider__text slider__text_concise">
-              «Действие пьесы «Длань Господня» разворачивается в подвале провинциальной церкви в Техасе, где мать главного
+              «Действие пьесы «Длань Господня» разворачивается в подвале провинциальной церкви в Техасе, где мать
+              главного
               героя с группой добровольцев готовит кукольное представление. Ей отчаянно нужна эта работа, её муж недавно
               умер, оставив её с сыном-подростком в эмоциональной и финансовой яме. И вот жуткая тварь захватывает
               контроль над левой рукой её беспокойного Джейсона и принимается терроризировать его и всех вокруг. По мере
-              накала страстей окружающие начинают подозревать, что рука одержима самим дьяволом, и пастор Грег предлагает
-              прибегнуть к экзорцизму. Однако «Длань Господня» — это не ужастик, по крайней мере, природа зла тут вовсе не
-              сверхъестественная. Чёрная комедия Аскинса о разделённой надвое душе человека ненавязчиво обнажает глубинные
+              накала страстей окружающие начинают подозревать, что рука одержима самим дьяволом, и пастор Грег
+              предлагает
+              прибегнуть к экзорцизму. Однако «Длань Господня» — это не ужастик, по крайней мере, природа зла тут вовсе
+              не
+              сверхъестественная. Чёрная комедия Аскинса о разделённой надвое душе человека ненавязчиво обнажает
+              глубинные
               импульсы — сексуальные, саморазрушительные, агрессивные — которые притаились в каждом из нас».
             </p>
             <a href="#" class="slider__link button-small">
