--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       </div>
     </nav>
   </header>
-  <main>
+  <main class ="content">
     <!-- секция 1-->
     <section class="preview-project">
       <h1 class="preview-project__title">С_училища</h1>
