feat: slider for block comments

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
         <div class="description-the-play__play">
           <h2 class="description-the-play__subtitle">Почитать пьесу</h2>
           <div class="description-the-play__card">
-            <div class="description-the-play__card-content">
+            <div class="description-the-play__card-top">
               <p class="description-the-play__card-name">Конкретные разговоры пожилых супругов ни о чём</p>
               <div class="description-the-play__btn-group">
                 <button class="description-the-play__card-watch" type="button">СМОТРЕТЬ ЧИТКУ
@@ -146,6 +146,8 @@
                   <svg class="description-the-play__arrow-down"></svg>
                 </button>
               </div>
+            </div>
+            <div class="description-the-play__card-bottom">
               <p class="description-the-play__author-name">Екатерина Августеняк</p>
               <p class="description-the-play__info">Санкт-Петербург</p>
               <p class="description-the-play__info">2020</p>
@@ -186,7 +188,7 @@
     </section>
     <!-- секция 4-->
     <section class="reviews">
-      <div class="slider">
+      <div class="slider slider_place_reviews">
         <div class="slider__top-row">
           <h2 class="slider__title">Рецензии</h2>
           <div class="slider__dots">
@@ -211,9 +213,9 @@
           </div>
         </div>
         <div class="slider__track">
-          <article class="slider__item">
-            <img src="./images/reviews__logo-1.svg" alt="Нью-Йорк Таймс" class="slider__logo-heading">
-            <p class="slider__text">
+          <article class="slider__item slider__item_offset-reviews">
+            <img src="./images/reviews__logo-1.svg" alt="Нью-Йорк Таймс" class="reviews__logo-heading">
+            <p class="reviews__text reviews__text_offset">
               «Действие пьесы «Длань Господня» разворачивается в подвале провинциальной церкви в Техасе, где мать
               главного
               героя с группой добровольцев готовит кукольное представление. Ей отчаянно нужна эта работа, её муж недавно
@@ -227,14 +229,14 @@
               глубинные
               импульсы — сексуальные, саморазрушительные, агрессивные — которые притаились в каждом из нас».
             </p>
-            <a href="#" class="slider__link button-small">
+            <a href="#" class="reviews__link button-small">
               <img src="./images/arrow__top-right.svg" class="button-small__image" alt="Стрелка">
               <p class="button-small__text">Читать полностью</p>
             </a>
           </article>
-          <article class="slider__item slider__item_offset">
-            <img src="./images/reviews__logo-2.svg" alt="Нью-Йорк Таймс" class="slider__logo-heading">
-            <p class="slider__text slider__text_concise">
+          <article class="slider__item slider__item_offset-reviews">
+            <img src="./images/reviews__logo-2.svg" alt="Нью-Йорк Таймс" class="reviews__logo-heading">
+            <p class="reviews__text reviews__text_offset">
               «Действие пьесы «Длань Господня» разворачивается в подвале провинциальной церкви в Техасе, где мать
               главного
               героя с группой добровольцев готовит кукольное представление. Ей отчаянно нужна эта работа, её муж недавно
@@ -248,14 +250,14 @@
               глубинные
               импульсы — сексуальные, саморазрушительные, агрессивные — которые притаились в каждом из нас».
             </p>
-            <a href="#" class="slider__link button-small">
+            <a href="#" class="reviews__link button-small">
               <img src="./images/arrow__top-right.svg" class="button-small__image" alt="Стрелка">
               <p class="button-small__text">Читать полностью</p>
             </a>
           </article>
-          <article class="slider__item slider__item_offset">
-            <img src="./images/reviews__logo-1.svg" alt="Нью-Йорк Таймс" class="slider__logo-heading">
-            <p class="slider__text slider__text_concise">
+          <article class="slider__item slider__item_offset-reviews">
+            <img src="./images/reviews__logo-1.svg" alt="Нью-Йорк Таймс" class="reviews__logo-heading">
+            <p class="reviews__text reviews__text_offset">
               «Действие пьесы «Длань Господня» разворачивается в подвале провинциальной церкви в Техасе, где мать
               главного
               героя с группой добровольцев готовит кукольное представление. Ей отчаянно нужна эта работа, её муж недавно
@@ -269,14 +271,14 @@
               глубинные
               импульсы — сексуальные, саморазрушительные, агрессивные — которые притаились в каждом из нас».
             </p>
-            <a href="#" class="slider__link button-small">
+            <a href="#" class="reviews__link button-small">
               <img src="./images/arrow__top-right.svg" class="button-small__image" alt="Стрелка">
               <p class="button-small__text">Читать полностью</p>
             </a>
           </article>
-          <article class="slider__item slider__item_offset">
-            <img src="./images/reviews__logo-1.svg" alt="Нью-Йорк Таймс" class="slider__logo-heading">
-            <p class="slider__text slider__text_concise">
+          <article class="slider__item slider__item_offset-reviews">
+            <img src="./images/reviews__logo-1.svg" alt="Нью-Йорк Таймс" class="reviews__logo-heading">
+            <p class="reviews__text reviews__text_offset">
               «Действие пьесы «Длань Господня» разворачивается в подвале провинциальной церкви в Техасе, где мать
               главного
               героя с группой добровольцев готовит кукольное представление. Ей отчаянно нужна эта работа, её муж недавно
@@ -290,7 +292,7 @@
               глубинные
               импульсы — сексуальные, саморазрушительные, агрессивные — которые притаились в каждом из нас».
             </p>
-            <a href="#" class="slider__link button-small">
+            <a href="#" class="reviews__link button-small">
               <img src="./images/arrow__top-right.svg" class="button-small__image" alt="Стрелка">
               <p class="button-small__text">Читать полностью</p>
             </a>
@@ -300,6 +302,57 @@
     </section>
     <!-- секция 5-->
     <section class="comments">
+      <div class="slider slider_place_comments">
+        <div class="slider__top-row">
+          <h2 class="slider__title">Отзывы зрителей</h2>
+          <div class="slider__dots">
+            <span class="slider__dot"></span>
+            <span class="slider__dot"></span>
+            <span class="slider__dot"></span>
+            <span class="slider__dot"></span>
+          </div>
+          <div class="slider__btns">
+            <button class="slider__btn" type="button">
+              <svg class="slider__btn-svg">
+                <circle class="slider__btn-circle slider__btn-circle_left" cx="24" cy="24" r="22"></circle>
+              </svg>
+              <img src="./images/arrow-left.svg" alt="стрелка" class="slider__btn-arrow">
+            </button>
+            <button class="slider__btn" type="button">
+              <svg class="slider__btn-svg">
+                <circle class="slider__btn-circle slider__btn-circle_right" cx="24" cy="24" r="22"></circle>
+              </svg>
+              <img src="./images/arrow-right.svg" alt="стрелка" class="slider__btn-arrow">
+            </button>
+          </div>
+        </div>
+        <div class="slider__track slider__track_place_comments">
+          <article class="slider__item slider__item_place_comments slider__item_offset-comments">
+            <p class="comments__text comments__text_offset">
+              Что-то похожее на эффект от мультфильмов типа «Сауз Парк» или про коня Боджэка возникает — я думаю, и пьеса написана с этой интонацией американских взрослых мультсериалов. И как хорошо все это с куклой-носочком. Так все чисто сделано!
+            </p>
+            <p class="comments__author">Наталья Зайцева</p>
+          </article>
+          <article class="slider__item slider__item_place_comments slider__item_offset-comments">
+            <p class="comments__text comments__text_offset">
+              Для самой этой истории формат читки работает отличным ироническим отстранением
+            </p>
+            <p class="comments__author">Дина Годер</p>
+          </article>
+          <article class="slider__item slider__item_place_comments slider__item_offset-comments">
+            <p class="comments__text comments__text_offset">
+              Мне данный формат дал возможность самой выбирать, как двигается персонаж, что на нем надето, какую машину он водит, и что за плакат висит в подвале церкви. Это было приятно, ведь я как будто сама поучаствовала в спектакле
+            </p>
+            <p class="comments__author">Дарья Морозова</p>
+          </article>
+          <article class="slider__item slider__item_place_comments slider__item_offset-comments">
+            <p class="comments__text comments__text_offset">
+              Мне данный формат дал возможность самой выбирать, как двигается персонаж, что на нем надето, какую машину он водит, и что за плакат висит в подвале церкви. Это было приятно, ведь я как будто сама поучаствовала в спектакле
+            </p>
+            <p class="comments__author">Дарья Морозова</p>
+          </article>
+        </div>
+      </div>
     </section>
     <!-- секция 6-->
     <section class="social-media">
